<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input1" />
    <EditText
        android:id="@+id/insertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input2"
        />
    <EditText
        android:id="@+id/insertGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input3"
       />
    <EditText
        android:id="@+id/insertYear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/InputPrompt3"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input4"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FinalButton"
            />

        <Button
            android:id="@+id/btnGetTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewListings"
            />

    </LinearLayout>



</LinearLayout>