<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditMovie">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input1" />
    <EditText
        android:id="@+id/insertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input2"
        />
    <EditText
        android:id="@+id/insertGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputPrompt2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/insertYear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/InputPrompt3"
        />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpdateButton"
            />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeletButton"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CancelButton"
        />




</LinearLayout>